<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue_background"
    android:padding="32dp"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="48dp"
            android:background="@color/white_element_bg"
            android:paddingLeft="32dp"
            android:paddingTop="8dp"
            android:paddingRight="32dp"
            android:paddingBottom="8dp"
            android:text="@string/register_title"
            android:textColor="@color/text_color"
            android:textSize="34sp"
            android:textStyle="bold" />

        <!-- Username Input -->
        <LinearLayout
            style="@style/LoginInputContainer"
            android:layout_marginBottom="16dp">

            <TextView
                style="@style/LoginInputLabel"
                android:text="@string/username" />

            <EditText
                android:id="@+id/editTextNewUsername"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:hint="________________________________"
                android:textColor="@color/text_color"
                android:textSize="20sp"
                android:inputType="text" />
        </LinearLayout>

        <!-- Password Input -->
        <LinearLayout
            style="@style/LoginInputContainer"
            android:layout_marginBottom="16dp">

            <TextView
                style="@style/LoginInputLabel"
                android:text="@string/password" />

            <EditText
                android:id="@+id/editTextNewPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:hint="________________________________"
                android:textColor="@color/text_color"
                android:textSize="20sp"
                android:inputType="textPassword" />
        </LinearLayout>

        <!-- Confirm Password Input -->
        <LinearLayout
            style="@style/LoginInputContainer"
            android:layout_marginBottom="32dp">

            <TextView
                style="@style/LoginInputLabel"
                android:text="@string/confirm_password" />

            <EditText
                android:id="@+id/editTextConfirmPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:hint="________________________________"
                android:textColor="@color/text_color"
                android:textSize="20sp"
                android:inputType="textPassword" />
        </LinearLayout>

        <Button
            android:id="@+id/buttonCreateAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/white_box_background"
            android:paddingHorizontal="48dp"
            android:text="@string/register"
            android:textColor="@color/text_color"
            android:textSize="24sp"
            android:textStyle="bold" />

    </LinearLayout>

    <Button
        android:id="@+id/buttonBackToLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="32dp"
        android:background="@drawable/white_box_background"
        android:text="@string/login"
        android:textColor="@color/text_color"
        android:textSize="18sp" />

</RelativeLayout>