<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue_background"
    android:padding="24dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:background="@color/white_element_bg"
            android:paddingLeft="24dp"
            android:paddingTop="8dp"
            android:paddingRight="24dp"
            android:paddingBottom="8dp"
            android:text="@string/feel_your_breath"
            android:textColor="@color/text_color"
            android:textSize="34sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnStartingTest"
            style="@style/MainButtonStyle"
            android:text="@string/starting_test" />

        <Button
            android:id="@+id/btnRandomColour"
            style="@style/MainButtonStyle"
            android:text="@string/random_colour" />

        <Button
            android:id="@+id/btnRecord"
            style="@style/MainButtonStyle"
            android:text="@string/record" />

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:columnCount="7"
            android:rowCount="1">

            <Button
                android:id="@+id/colorHappy"
                style="@style/ColorSquareButton"
                android:background="@color/mood_happy" />

            <Button
                android:id="@+id/colorSad"
                style="@style/ColorSquareButton"
                android:background="@color/mood_sad" />

            <Button
                android:id="@+id/colorAnger"
                style="@style/ColorSquareButton"
                android:background="@color/mood_anger" />

            <Button
                android:id="@+id/colorFear"
                style="@style/ColorSquareButton"
                android:background="@color/mood_fear" />

            <Button
                android:id="@+id/colorSelfAbasement"
                style="@style/ColorSquareButton"
                android:background="@color/mood_self_abasement" />

            <Button
                android:id="@+id/colorAnxiety"
                style="@style/ColorSquareButton"
                android:background="@color/mood_anxiety" />

            <Button
                android:id="@+id/colorDisgust"
                style="@style/ColorSquareButton"
                android:background="@color/mood_disgust" />
        </GridLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btnPause"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="32dp"
        android:background="@drawable/circular_button_background"
        android:drawableTop="@drawable/pause_icon"
        android:paddingTop="20dp" />

</RelativeLayout>